--- a/carrer_post.html
+++ b/carrer_post.html
@@ -59,6 +59,7 @@
                         <div class="form-group mt-2" id="seniority_level">
                             <label for="exampleInputText6">Seniority Level</label>
                             <select class="form-control inputform seniorityLevelType mt-2">
+                                <option>Interm</option>
                                 <option>Entry</option>
                                 <option>Middle</option>
                                 <option>Senior</option>
