--- a/login.html
+++ b/login.html
@@ -36,9 +36,9 @@
                         <button type="submit" class="btn signInButton btn-primary mt-3" id="signInButton">Sign in</button>
                       </form>
                 </div>
-                <div class="col-6 mt-4">
+                <div class="col-12 col-md-11 col-lg-10 justify-content-center d-flex mt-4">
                     <div class="bottom_box_alert d-flex justify-content-center align-items-center text-align-center">
-                        <p>New to Jobpilot? <a href="/registration.html">Create an account.</a></p>
+                        <p class="text-center">New to Jobpilot? <a href="/registration.html">Create an account.</a></p>
                     </div>
                 </div>
             </div>
