--- a/user.html
+++ b/user.html
@@ -25,9 +25,8 @@
                 </div>
                 <div class="col-10">
                     <div class="navigation_links d-flex justify-content-start gap-5 align-items-center text-center">
-                        <a class="light_theme_color" href>Home</a>
-                        <a class="light_theme_color" href>Search a job</a>
-                        <a class="light_theme_color" href>Contact us</a>
+                        <a class="light_theme_color" href="index.html">Home</a>
+                        <a class="light_theme_color" href="index.html#jobs_lists">Search a job</a>
                     </div>
                 </div>
             </div>
@@ -35,10 +34,10 @@
     </section>
     <section class="user_info mt-5">
         <div class="container">
-            <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-10">
-                    <div class="row gap-2 d-flex justify-content-between">
-                        <div class="col-3">
+            <div class="row d-flex justify-content-between align-items-center">
+                <div class="col-12">
+                    <div class="row gap-2 d-flex justify-content-center">
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="profile_box d-flex flex-column justify-content-around align-items-center">
                                 <div class="picture_box d-flex justify-content-center align-items-center">
                                     <i class="bi bi-person-fill text-center d-flex"></i>
@@ -62,9 +61,12 @@
                                 </div> -->
                             </div>
                         </div>
-                        <div class="col-8">
+                        <div class="col-12">
                             <div class="profile_info_main_box">
                                <div class="row">
+                                <div class="d-flex col-3 burgerMenu justify-content-start">
+                                    <i class="bi bi-list"></i>
+                                </div>
                                 <div class="profile_info_nav d-flex justify-content-around">
                                     <p class="my_profile active" data-target="content-1">My profile</p>
                                     <p class="account_settings" data-target="content-2">Account Settings</p>
