--- a/registration.html
+++ b/registration.html
@@ -46,7 +46,7 @@
                         <button type="submit" class="btn signInButton btn-primary mt-3" id="signUpButton">Sign up</button>
                       </form>
                 </div>
-                <div class="col-6 mt-4">
+                <div class="col-12 col-md-11 col-lg-10 justify-content-center d-flex mt-4">
                     <div class="bottom_box_alert d-flex justify-content-center align-items-center text-align-center">
                         <p>Already have an account? <a href="/login.html">Sign in</a></p>
                     </div>
