--- a/carrer_post.html
+++ b/carrer_post.html
@@ -16,15 +16,15 @@
 <body>
     <div class="container">
         <div class="row d-flex justify-content-center">
-            <div class="col-6 d-flex flex-column align-items-center">
-                <div class="d-flex justify-content-center align-items-center flex-column">
+            <div class="col-10 d-flex flex-column align-items-center">
+                <div class="d-flex col-10 justify-content-center align-items-center flex-column">
                     <div class="col-4 mt-5 d-flex justify-content-center align-items-center flex-column">
                         <div class="login_logo">
                             <a href="/index.html"><img src="/src/images/logo.png"></a>
                         </div>
                         <h4 class="form_header">Post a Carrer Opportunity</h4>
                     </div>
-                    <form class="mt-3 main_form_group">
+                    <form class="mt-3 col-12 col-lg-7 main_form_group">
                         <div class="form-group">
                             <label for="exampleInputText1">Company Name</label>
                             <input type="text" class="form-control inputform mt-2" id="exampleInputText1" placeholder="Enter Company name">
@@ -94,6 +94,27 @@
             </div>
         </div>
     </div>
+    <section class="footer mt-20">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <div class="d-flex gap-1">
+                            <div class="footer_logo d-flex justify-content-center align-items-center">
+                                <img class="footer_logo_img" src="/src/images/logo.png">
+                            </div>
+                            <div class="d-flex justify-content-center align-items-center">
+                                <h4 class="footer_text">© 2023 Jobpilot</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <p class="rights">All rights reserved</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </section>
     <script src="/src/scripts/career_post.js"></script>
     <script src="/src/scripts/career_post_fire.js" type="module"></script>
 </body>
