--- a/index.html
+++ b/index.html
@@ -147,6 +147,27 @@
             </div>
         </div>
     </section>
+    <section class="footer mt-20">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="d-flex justify-content-end align-items-center">
+                        <div class="d-flex gap-1">
+                            <div class="footer_logo d-flex justify-content-center align-items-center">
+                                <img class="footer_logo_img" src="/src/images/logo.png">
+                            </div>
+                            <div class="d-flex justify-content-center align-items-center">
+                                <h4 class="footer_text">© 2023 Jobpilot</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-end align-items-center">
+                        <p class="rights">All rights reserved</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </section>
     <script src="/src/scripts/index.js"></script>
     <script src="/src/scripts/index_fire.js" type="module"></script>
 </body>
