--- a/registration.html
+++ b/registration.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/src/styles/style.css">
     <link rel="stylesheet" href="/src/styles/login.css">
     <link rel="stylesheet" href="/src/styles/registration.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,6 +55,27 @@
             </div>
         </div>
     </div>
+    <section class="footer mt-20">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <div class="d-flex gap-1">
+                            <div class="footer_logo d-flex justify-content-center align-items-center">
+                                <img class="footer_logo_img" src="/src/images/logo.png">
+                            </div>
+                            <div class="d-flex justify-content-center align-items-center">
+                                <h4 class="footer_text">© 2023 Jobpilot</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <p class="rights">All rights reserved</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </section>
     <script src="/src/scripts/registration_fire.js" type="module"></script>
 </body>
 </html>
