--- a/user.html
+++ b/user.html
@@ -37,7 +37,7 @@
             <div class="row d-flex justify-content-between align-items-center">
                 <div class="col-12">
                     <div class="row gap-2 d-flex justify-content-center">
-                        <div class="col-12 d-flex justify-content-center">
+                        <div class="col-12 col-lg-3 d-flex justify-content-center">
                             <div class="profile_box d-flex flex-column justify-content-around align-items-center">
                                 <div class="picture_box d-flex justify-content-center align-items-center">
                                     <i class="bi bi-person-fill text-center d-flex"></i>
@@ -61,7 +61,7 @@
                                 </div> -->
                             </div>
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 col-lg-8">
                             <div class="profile_info_main_box">
                                <div class="row">
                                 <div class="d-flex col-3 burgerMenu justify-content-start">
@@ -249,7 +249,7 @@
                                         </div>
                                     </div>
                                     <div class="content" id="content-3">
-                                        <div class="col-12 row mt-5 d-flex justify-content-center gap-5 saved_items">
+                                        <div class="col-12 row mt-5 d-flex justify-content-start gap-5 saved_items">
                                             
                                         </div>
                                     </div>
@@ -261,7 +261,27 @@
             </div>
         </div>
     </section>
-
+    <section class="footer mt-20">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="d-flex justify-content-end align-items-center">
+                        <div class="d-flex gap-1">
+                            <div class="footer_logo d-flex justify-content-center align-items-center">
+                                <img class="footer_logo_img" src="/src/images/logo.png">
+                            </div>
+                            <div class="d-flex justify-content-center align-items-center">
+                                <h4 class="footer_text">© 2023 Jobpilot</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-end align-items-center">
+                        <p class="rights">All rights reserved</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </section>
     <script src="https://unpkg.com/jspdf@latest/dist/jspdf.umd.min.js"></script>
     <script src="/src/scripts/user.js" type="module"></script>
     <script src="/src/scripts/user_fire.js" type="module"></script>
